2003-10-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c: new method
	GLib::Instantiatable#signal_has_handler_pending?.

	* src/rbgobj_signal.c (g_signal_handler_block,
	gobj_sig_handler_unblock, gobj_sig_handler_disconnect):
	use NUM2ULONG instead of NUM2INT.

2003-10-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_signal.c: Fix a segfault when GLib::Object#signal_emit 
	is called. 

2003-10-08  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgobj_param.c: Removed a compilation warning in function
	value_validate_ensure().

2003-10-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c: call g_mem_set_vtable() to make glib to use
	ruby_xmalloc(), ruby_xrealloc(), ruby_xfree().

2003-09-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/lib/mkmf-gnome2.rb: append "-I$(sitearchdir)" to $CPPFLAGS not
	$CFLAGS. and stop overriding create_makefile().

2003-09-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (gobj_s_signal_new): use #instance_method,
	UnboundMethod#bind and Method#call instead of #__send__.

	* src/rbgobj_signal.c (gobj_s_method_added): check GType.

2003-09-22  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (gobj_s_sig_override): check if the class is
	registered.

	* src/rbgobj_signal.c (gobj_s_method_added): when a method named
	'do_<signal_name>' is defined then override default handler by the
	method.

2003-09-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c: override #append_features of interface modules to
	prevent including them into classes which is not subclass of
	GLib::Instantiatable.

2003-09-18  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_closure.c: implement GLib::Closure#invalidate.

	* src/rbgobj_closure.c: don't invoke Proc objects after ruby is
	terminated.

	* src/rbgobj_signal.c: implement GLib::MetaInterface#signal_override
	and GLib::Instantiatable#signal_chain_from_overridden experimentaly.
